--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,8 +1,8 @@
 .footer {
     flex-basis: 100%;  
-    padding: 50px 0;
+    padding: 5px 0;
     border: 1px solid $main-color;
-   /*  background: rgb(82, 205,228); */
+    background: rgb(38, 79, 87);
     .sm-links {
         flex-basis: 30%;
     }
@@ -11,23 +11,44 @@
     justify-content: space-evenly;
     display: flex;
     width: 80%;
-    height: 110%;
+    /* height: 110%; */
     margin: auto;
+    margin-top: 50px;
 }
 .sm-links {
     font-family: Arial, Helvetica, sans-serif;
+    border-bottom: 1px solid $main-color;
+    border-top: 1px solid $main-color;
+    padding: 10px;
     &--darken {
-      /*   background: rgb(34, 196, 224); */
+        background: rgb(38, 85, 95);
     }
     &__title{
-        margin: 20px 0 10px;
+        /* margin: 20px 0 10px; */
         font-size: 3rem;
         font-weight: bold;
+        color: $main-color;
     }
     &__item{
         font-size: 2rem;
+       
         padding: 4px 27px;
         margin-right: 10px;
+        color: beige;
         font-weight: bold;
     }
+}
+.sm-links a {
+    text-decoration: none;
+    font-size: 30px;
+}
+.sm-links__item:hover {
+    color: $main-color;
+    transition: 0.5s;
+}
+.footer-description {
+    color: beige;
+    font-size: 10px;
+    margin-top: 40px;
+    margin-left: 10px;
 }
