--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -13,7 +13,7 @@
       padding: 20px 0;
       &-image {
         width: 170px;
-        padding: 15px;
+        margin-right: 50px;
       }
     }
     
@@ -22,6 +22,7 @@
     color: black;
     flex-grow: 1;
     border-right: 1px solid $second-color;
+    border-left: 1px solid $second-color;
   }
   .header__hours {
     color: black;
@@ -31,7 +32,7 @@
   }
   .header__email {
     flex-grow: 1;
-    /* border-right: 1px solid $second-color; */
+    border-right: 1px solid $second-color;
   }
   
   
