--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -2,7 +2,7 @@
     flex-basis: 100%;  
     padding: 5px 0;
     border: 1px solid $main-color;
-    background: rgb(38, 79, 87);
+    background: rgb(46, 45, 45);
     .sm-links {
         flex-basis: 30%;
     }
@@ -13,29 +13,27 @@
     width: 80%;
     /* height: 110%; */
     margin: auto;
-    margin-top: 50px;
+    margin-top: 22px;
 }
 .sm-links {
     font-family: Arial, Helvetica, sans-serif;
     border-bottom: 1px solid $main-color;
     border-top: 1px solid $main-color;
-    padding: 10px;
     &--darken {
-        background: rgb(38, 85, 95);
+        background: rgb(43, 41, 41);
     }
     &__title{
         /* margin: 20px 0 10px; */
-        font-size: 3rem;
-        font-weight: bold;
+        font-size: 2rem;
+        font-family:'Times New Roman', Times, serif;
         color: $main-color;
     }
     &__item{
-        font-size: 2rem;
-       
-        padding: 4px 27px;
+        font-size: 1.5rem;
+        padding: 4px 7px;
         margin-right: 10px;
         color: beige;
-        font-weight: bold;
+        
     }
 }
 .sm-links a {
@@ -47,8 +45,10 @@
     transition: 0.5s;
 }
 .footer-description {
-    color: beige;
-    font-size: 10px;
+    color: black;
+    padding: 1px;
+    font-size: 7px;
     margin-top: 40px;
     margin-left: 10px;
+    background-color: $main-color;
 }
