--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -46,12 +46,15 @@ html {
 .fa-phone-volume, 
 .fa-clock,
 .fa-at,
-.fa-home,
 .fa-map-marker-alt,
 .fa-globe-americas {
   color: $main-color;
   margin-right: 10px;
-  font-size: 4rem; 
+  font-size: 2rem; 
+}
+.fa-home {
+  font-size: 25px;
+  color: $main-color;
 }
 .fa-hand-pointer,
 .fa-tachometer-alt,
@@ -76,17 +79,26 @@ html {
   font-size: 4rem;
   margin-right: 30px;
   margin-left: 30px;
+ 
 }
 .fa-sign-out-alt {
   color: $main-color;
   font-size: 16px;
 
 }
+.main-wrap {
+  
+  width: 100%;
+}
 .main-title {
-  text-align: center;
+  /* text-align: center; */
   width: 100%;
   text-transform: uppercase;
-  margin-top: 30px;
+  margin: 19px 200px;
+  font-size: 2rem;
+ /*  background-color: rgba(0,0,0,0.4); */
+  padding: 5px;
+  color: black;
 }
 
 #tooltipContainer
