--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -12,7 +12,8 @@
         
     }
     ul {
-        background: linear-gradient(0deg, rgba(2,0,36,0.7) 0%, rgba(31,130,142,1) 48%, rgba(0,212,255,1) 100%); padding: 25px 25px;
+        
+        background: linear-gradient(0deg, rgba(2,0,36,0.7) 0%, rgb(31, 130, 142) 48%, rgba(0,212,255,1) 100%); padding: 25px 25px;
        
     }
     ul a {
