--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -2,7 +2,7 @@
     flex-basis: 100%;  
     padding: 5px 0;
     border: 1px solid $main-color;
-    background: rgb(46, 45, 45);
+    background: linear-gradient(0deg, rgba(2,0,36,0.7) 0%, rgba(31,130,142,1) 48%, rgba(0,212,255,1) 100%);
     .sm-links {
         flex-basis: 30%;
     }
@@ -20,13 +20,15 @@
     border-bottom: 1px solid $main-color;
     border-top: 1px solid $main-color;
     &--darken {
-        background: rgb(43, 41, 41);
+        /* background: linear-gradient(0deg, rgba(2,0,36,0.7) 0%, rgba(31,130,142,1) 48%, rgba(0,212,255,1) 100%); */
+        
+        /* background: rgb(43, 41, 41); */
     }
     &__title{
         /* margin: 20px 0 10px; */
         font-size: 2rem;
         font-family:'Times New Roman', Times, serif;
-        color: $main-color;
+        color: black;
     }
     &__item{
         font-size: 1.5rem;
