--- a/src/scss/nav-hamburger.scss
+++ b/src/scss/nav-hamburger.scss
@@ -19,13 +19,13 @@ table:hover .example
     display: block;
     transition: 1s;
 }
-@media(max-width:640px)
+/* @media(max-width:640px)
     {
        .nav
        {
         display: none;
        }
-    } 
+    }  */
 
 
  
