--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,8 @@
 @import "./article__flex";
 @import "./category.scss";
 @import "./nav-hamburger.scss";
+@import "./zdjecia";
+@import "./main-category.scss";
 
 
 $default-font: arial, sans-serif;
@@ -29,17 +31,16 @@ $special-font: 'pt sans', 'roboto', arial, sans-serif;
   color: black;
 }
 body {
-  
   color: black;
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  min-height: 120vh;
 }
 html {
   font-size: 7px;
   font-family: $default-font;
-  
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .settings {
   display: flex;
@@ -51,7 +52,7 @@ html {
 .fa-globe-americas {
   color: $main-color;
   margin-right: 10px;
-  font-size: 2rem; 
+  font-size: 2.5rem; 
 }
 .fa-home {
   font-size: 25px;
@@ -62,7 +63,12 @@ html {
 .fa-tv,
 .fa-users {
   color: $main-color;
-  font-size: 6rem; 
+  font-size: 4rem; 
+}
+.fa-angle-double-right {
+    color: $main-color;
+    font-size: 2.5rem; 
+
 }
 .fa-exclamation,
 .fa-sign-in {
@@ -80,21 +86,23 @@ html {
 }
 .fa-sign-in-alt {
   color: $main-color;
-  font-size: 20px;
+  font-size: 13px;
   margin-right: 10px;
 }
-.fa-facebook {
+.fa-facebook-square {
   color: $facebook;
   font-size: 4rem;
   margin-right: 30px;
   margin-left: 30px;
- 
+  
+}
+.fa-facebook {
+  color: black;
+  font-size: 4rem;
 }
 .fa-sign-out-alt {
   color: $main-color;
   font-size: 15px;
-  margin: 4px;
-  margin-left: 5px;
   
 }
 .main-wrap {
@@ -105,42 +113,26 @@ html {
   font-size: 2rem;
 }
 .main-title {
-  /* text-align: center; */
-  width: 100%;
-  text-transform: uppercase;
-  text-align: center;
-  /* margin: 19px 200px; */
   font-size: 2rem;
- /*  background-color: rgba(0,0,0,0.4); */
   padding: 5px;
   color: black;
+  width: 100%; 
+  font-family: Arial, Helvetica, sans-serif;  
+  /* min-height: 13vh; */
 }
-.main-title {
-    width: 100%;
-    text-align: center; 
-    font-size: 2.5rem;
-    font-family: Arial, Helvetica, sans-serif;  
-  }
+
+
+
   .main-description {
-  font-size: 1.5rem;
-  font-family:Georgia, 'Times New Roman', Times, serif;  
-  font-weight: bold;
-  line-height: 1.7;
+  font-size: 1.6rem;
+  font-family: Arial, Helvetica, sans-serif;  
+  margin-bottom: 49px ;
+ 
+  line-height: 1.3;
   text-align: justify;
   width: 93%;
   margin: auto;
 }
-#tooltipContainer
-{
-    border-bottom: 1px solid white;
-    background: linear-gradient(0deg, rgba(2,0,36,0.7) 0%, rgba(31,130,142,1) 48%, rgba(0,212,255,1) 100%); padding: 25px 25px;
-    position: absolute;
-    color: white;
-    text-transform: uppercase;
-    left: 50px;
-    top: 0;
-    font-size: 11px;
-    padding: 5px;
-    display: none;
-    
-}
+
+
+
