--- a/src/scss/category.scss
+++ b/src/scss/category.scss
@@ -5,7 +5,7 @@
     /* border: 1px solid red; */
     justify-content: space-around;
     align-content: space-around; 
-   
+  /*  min-height: 100vh; */
 }
 .category-right {
     /* justify-content: space-around;
