--- a/src/scss/_article.scss
+++ b/src/scss/_article.scss
@@ -19,3 +19,15 @@
         font-size: 14px;
     }
 }
+@media(max-width: 900px)
+{
+    .article__list--title {
+       font-size: 12px; 
+    } 
+    .article__list--description {
+        font-size: 10px; 
+    }
+    .article__list--subtitle {
+        font-size: 12px;
+    }
+}  
