--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -26,8 +26,8 @@
     }
     &__title{
         /* margin: 20px 0 10px; */
-        font-size: 2rem;
-        font-family:'Times New Roman', Times, serif;
+        font-size: 1.5rem;
+        font-family:Verdana, Geneva, Tahoma, sans-serif;
         color: black;
     }
     &__item{
