--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -3,14 +3,15 @@
     /* flex-wrap: wrap; */
     text-align: center;
     flex-grow: 1;
-    font-weight: bold;
-    margin-top: 10px;
-    padding: 5px;
+    font-size: 12px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
+    
     align-items: center;
     justify-content: center;
     &__logo {
-      
-      padding: 20px 0;
+      margin: 10px 10px;
+      /* padding: 20px 0; */
       &-image {
         width: 170px;
         margin-right: 50px;
@@ -44,3 +45,16 @@
     background-color: green;
     flex-grow: 1;
 }
+@media(max-width: 900px)
+{
+   .header {
+   font-size: 10px;
+   }
+   .header__logo {
+    margin: 10px 10px;
+   }
+   .header__logo-image {
+    width: 120px;
+    margin-right: 10px;
+   }
+}  
