--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -2,7 +2,7 @@
 .nav {
     flex-basis: 100%; 
     flex-grow: 1; 
-    font-family: $special-font;  
+    font-family: Verdana, Geneva, Tahoma, sans-serif;  
     z-index: 3;
     text-align: center;
     
@@ -34,6 +34,7 @@
     }
     
 }
+
 .nav ul {
     position: relative;
 }
@@ -42,7 +43,7 @@
 }
 
 .nav  li ul  {
-    background: linear-gradient(0deg, rgba(31,130,142,0.9) 48%, rgba(2,0,36,0.9) 0%, rgba(0,212,255,0.9) 100%);
+    background: rgba(6, 18, 51, 0.8);
     
     display: none;
 }
@@ -52,7 +53,8 @@
     width: 210px;
     margin:  12px -78px;
     height: 500px;
-   
+    margin-top: 28px;
+
 }
 
 .menu-nav {
@@ -106,6 +108,30 @@
 .menu-nav__item:nth-last-child(1) { 
     margin-left: auto;
 }
+
+@media(max-width: 900px)
+{
+   .nav ul a
+   {
+   font-size: 10px;
+   }
+   .nav li
+   {
+   font-size: 10px;
+   }
+   .menu-nav__item {
+    margin: -15px 3px;
+   }
+   .nav ul {
+    height: 45px;
+    padding: 9px 25px;
+   }
+   .nav-btn {
+    padding: 5px 10px;
+    margin-top: -4px;
+}
+
+}  
      
      
 
