--- a/src/scss/_zdjecia.scss
+++ b/src/scss/_zdjecia.scss
@@ -126,8 +126,19 @@ font-size: 12px;
         transition: 1s;
         border: black;
         width: 290px;
-        height: 113px;
+        height: 128px;
+        .table-link__none {
+           display: none;
+        }
     }
+
+    
+    .table-link__none--title {
+        font-size: 12px;
+    }
+
+    
+
     .category-right__main img:hover 
     {
        display: none;
@@ -137,11 +148,7 @@ font-size: 12px;
        display: block;
        transition: 1s;
    } 
-   /* --------------------------------- */
-   /*  .category-div__main:hover {
-     display: none;
-    } */
-    /* --------------------------------- */
+   
    .category-right__main:hover img
    {
        display: none 
@@ -155,12 +162,6 @@ font-size: 12px;
         transition: 1s;
    }
     
-    /* --------------------------------- */
-   /* .td {
-    width: 229px;
-    height: 126px;
-   } */
-   /* --------------------------------- */
     .category-right__main
     {
         display: flex;
@@ -173,6 +174,18 @@ font-size: 12px;
         background-color: white; 
         text-align: center;
     }
+
+
+    @media(max-width: 900px)
+    {
+        .article__list--left
+       {
+       width: 220px;
+       }
+       .example {
+           width: 169px;
+       }
+    }  
     
     @media(min-width:640px)
     {
@@ -183,6 +196,9 @@ font-size: 12px;
         .flexbox-container div
         {
             flex-basis: 250px;
+        }
+        .table-link__none {
+            font-size: 7px;
         }
     } 
     
@@ -200,7 +216,7 @@ font-size: 12px;
         }
      } 
   
-
+     
 
  
 /* <!----------------------------------> */
