--- a/src/scss/main-category.scss
+++ b/src/scss/main-category.scss
@@ -7,12 +7,12 @@
     display: flex;
     flex-wrap: wrap;
     min-height: 65vh;
-}
-.category-right__main--wrap {
     text-align: center;
     align-content: space-around;
     justify-content: space-around;
+    
 }
+
 .category-right__main--wrap .category-right__main {
     /* padding: 20px; */
     flex-basis: 30%;
@@ -27,7 +27,7 @@
 }
 @media (max-width: 1100px) {
     .category-right__main--wrap .category-right__main {
-        flex-basis: 50%;   
+        flex-basis: 40%;   
         margin: auto;
     } 
     .category-right__main--wrap div img {
@@ -36,7 +36,7 @@
 }
 @media (max-width: 500px) {
     .category-right__main--wrap .category-right__main {
-        flex-basis: 100%;   
+        flex-basis: 50%;   
     } 
     .main-description {
         font-size: 10px;
@@ -67,7 +67,7 @@
     }
   } */
 
-  .example-second
+  /* .example-second
    {
        display: none;
    }
@@ -98,13 +98,13 @@
    .table-link--second:hover {
         color: rgb(237,28,36);
         transition: 1s;
-   }
+   } */
    /* .logo-orange {
        width: 195px;
       margin-top: 40px;
    } */
    
-   .art2 {
+   /* .art2 {
     height: 116px;
     }
    @media(max-width: 640px)
@@ -119,9 +119,9 @@
            
                flex-basis: 400px;
        }
-    } 
+    }  */
   /* ------------orange-end-------------- */
-  .flexbox-container
+  /* .flexbox-container
     {
        display: flex;
         justify-content: center;
@@ -149,4 +149,4 @@
                flex-basis: 300px;
        }
     } 
- 
+  */
