--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,7 +35,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 120vh;
+  /* min-height: 120vh; */
 }
 html {
   font-size: 7px;
@@ -89,16 +89,18 @@ html {
   font-size: 13px;
   margin-right: 10px;
 }
-.fa-facebook-square {
+.fa-facebook {
   color: $facebook;
+  font-size: 4rem;
+  margin-left: 40px;
+  margin-right: 30px;
+}
+.fa-facebook-square {
+  color: black;
   font-size: 4rem;
   margin-right: 30px;
   margin-left: 30px;
   
-}
-.fa-facebook {
-  color: black;
-  font-size: 4rem;
 }
 .fa-sign-out-alt {
   color: $main-color;
@@ -117,7 +119,7 @@ html {
   padding: 5px;
   color: black;
   width: 100%; 
-  font-family: Arial, Helvetica, sans-serif;  
+  font-family:Verdana, Geneva, Tahoma, sans-serif;  
   /* min-height: 13vh; */
 }
 
@@ -125,7 +127,7 @@ html {
 
   .main-description {
   font-size: 1.6rem;
-  font-family: Arial, Helvetica, sans-serif;  
+  font-family: Verdana, Geneva, Tahoma, sans-serif ;  
   margin-bottom: 49px ;
  
   line-height: 1.3;
@@ -133,6 +135,41 @@ html {
   width: 93%;
   margin: auto;
 }
-
+@media(max-width: 900px)
+{
+  .fa-home {
+    font-size: 17px;
+}
+  .fa-facebook {
+  
+  font-size: 3rem;
+  margin-left: 20px;
+  margin-right: 15px;
+}
+.main-title {
+  font-size: 11px;
+}
+.main-description {
+  font-size: 10px;
+}
+.article__description {
+  font-size: 11px;
+}
+.fa-angle-double-right {
+  font-size: 2rem;
+}
+.fa-hand-pointer, .fa-tachometer-alt, .fa-tv, .fa-users {
+   font-size: 3rem;
+}
+.tooltip {
+     width: 50px;
+}
+.fa-circle {
+    font-size: 6px;
+  }
+  .fa-sign-out-alt {
+    font-size: 10px;
+  }
+}
 
 
