--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -150,7 +150,7 @@ html {
   line-height: 1.3;
   text-align: justify;
   width: 93%;
-  margin: auto;
+ /*  margin: auto; */
 }
 @media(max-width: 900px)
 {
