--- a/src/scss/category.scss
+++ b/src/scss/category.scss
@@ -2,10 +2,10 @@
     flex-wrap: wrap;
    width: 100%;
     display: flex;
-    margin-top: 15px;
+    margin-top: 33px;
     /* border: 1px solid red; */
-    /* justify-content: space-around;
-    align-content: space-around;  */
+    justify-content: space-around;
+    /* align-content: space-around;  */
     /*  min-height: 100vh; */
 }
 .category-wrap__zaluzje {
