--- a/src/scss/main-category.scss
+++ b/src/scss/main-category.scss
@@ -11,20 +11,26 @@
     text-align: center;
     align-content: space-around;
     justify-content: space-around;
-    margin-top: 170px;
-    margin-bottom: 170px;
+    margin-top: 140px;
+    margin-bottom: 140px;
     
 }
 .category-special {
     
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 60px;
+    margin-bottom: 70px;
     
 }
 .category-special2 {
     
-    margin-top: 150px;
-    margin-bottom: 150px;
+    margin-top: 100px;
+    margin-bottom: 110px;
+   
+}
+.category-special3 {
+    
+    margin-top: 130px;
+    margin-bottom: 130px;
    
 }
 .category-right__main--wrap-special { 
